--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions: # Workload Identity Federation 사용 시 필요
-      contents: 'write'
+      contents: 'read'
       id-token: 'write'
 
     steps:
@@ -32,29 +32,30 @@ jobs:
         workload_identity_provider: ${{ secrets.WIF_PROVIDER }} # 예: projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider
         service_account: ${{ secrets.WIF_SERVICE_ACCOUNT }} # 예: my-service-account@my-project.iam.gserviceaccount.com
 
+    # (서비스 계정 키 사용 시 대체 인증 방법)
+    # - name: Authenticate to Google Cloud (Service Account Key)
+    #   uses: google-github-actions/auth@v2
+    #   with:
+    #     credentials_json: ${{ secrets.GCP_SA_KEY }}
+
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v2
 
-    - name: Configure Docker to use gcloud credential helper
-      run: gcloud auth configure-docker ${{ env.GAR_LOCATION }}-docker.pkg.dev
+    - name: Get OIDC Token for debug
+      id: get_oidc_token
+      uses: actions/github-script@v7
+      with:
+        result-encoding: string
+        script: |
+          return await core.getIDToken()
 
-    - name: Build Docker image
+    - name: Decode OIDC Token for debug
       run: |
-        docker build -t ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/${{ env.IMAGE_NAME }}:${{ github.sha }} .
-        docker build -t ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/${{ env.IMAGE_NAME }}:latest .
-
-    - name: Push Docker image to Artifact Registry
-      run: |
-        docker push ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
-        docker push ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/${{ env.IMAGE_NAME }}:latest
-
-    - name: Deploy to Cloud Run
-      run: |
-        gcloud run deploy ${{ env.SERVICE_NAME }} \
-          --image ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/${{ env.IMAGE_NAME }}:${{ github.sha }} \
-          --platform managed \
-          --region ${{ env.REGION }} \
-          --allow-unauthenticated \
-          --update-secrets "DISCORD_TOKEN=${{ secrets.DISCORD_BOT_TOKEN }}:latest" \
-          --set-env-vars "GCP_PROJECT_ID=${{ env.GCP_PROJECT_ID }}" \
-          --project ${{ env.GCP_PROJECT_ID }}
+        echo "Raw OIDC Token: ${{ steps.get_oidc_token.outputs.result }}"
+        echo "Decoded OIDC Token Payload:"
+        TOKEN_PAYLOAD=$(echo "${{ steps.get_oidc_token.outputs.result }}" | cut -d. -f2 | base64 --decode)
+        echo "${TOKEN_PAYLOAD}" | jq .
+        echo "Subject (sub) claim from token:"
+        ACTUAL_SUBJECT=$(echo "${TOKEN_PAYLOAD}" | jq -r .sub)
+        echo "${ACTUAL_SUBJECT}"
+        echo "::set-output name=actual_subject::${ACTUAL_SUBJECT}" # 다음 스텝에서 사용 가능하도록
