--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,21 +41,26 @@ jobs:
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v2
 
-    - name: Get OIDC Token for debug
-      id: get_oidc_token
-      uses: actions/github-script@v7
-      with:
-        result-encoding: string
-        script: |
-          return await core.getIDToken()
+    - name: Configure Docker to use gcloud credential helper
+      run: gcloud auth configure-docker ${{ env.GAR_LOCATION }}-docker.pkg.dev
 
-    - name: Decode OIDC Token for debug
+    - name: Build Docker image
       run: |
-        echo "Raw OIDC Token: ${{ steps.get_oidc_token.outputs.result }}"
-        echo "Decoded OIDC Token Payload:"
-        TOKEN_PAYLOAD=$(echo "${{ steps.get_oidc_token.outputs.result }}" | cut -d. -f2 | base64 --decode)
-        echo "${TOKEN_PAYLOAD}" | jq .
-        echo "Subject (sub) claim from token:"
-        ACTUAL_SUBJECT=$(echo "${TOKEN_PAYLOAD}" | jq -r .sub)
-        echo "${ACTUAL_SUBJECT}"
-        echo "::set-output name=actual_subject::${ACTUAL_SUBJECT}" # 다음 스텝에서 사용 가능하도록
+        docker build -t ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/${{ env.IMAGE_NAME }}:${{ github.sha }} .
+        docker build -t ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/${{ env.IMAGE_NAME }}:latest .
+
+    - name: Push Docker image to Artifact Registry
+      run: |
+        docker push ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+        docker push ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/${{ env.IMAGE_NAME }}:latest
+
+    - name: Deploy to Cloud Run
+      run: |
+        gcloud run deploy ${{ env.SERVICE_NAME }} \
+          --image ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/${{ env.IMAGE_NAME }}:${{ github.sha }} \
+          --platform managed \
+          --region ${{ env.REGION }} \
+          --allow-unauthenticated \
+          --update-secrets "DISCORD_TOKEN=${{ secrets.DISCORD_BOT_TOKEN }}:latest" \
+          --set-env-vars "GCP_PROJECT_ID=${{ env.GCP_PROJECT_ID }}" \
+          --project ${{ env.GCP_PROJECT_ID }}
