--- a/deploy-py/pyproject.toml
+++ b/deploy-py/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "google-cloud-iam>=2.19.0",
     "google-cloud-resource-manager>=1.14.2",
     "google-cloud-run>=0.10.18",
+    "pynacl>=1.5.0",
     "requests>=2.32.3",
 ]
 
